// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should center and maximize the selection when a minHeight and minWidth is given 1`] = `
<div
  class="selection"
>
  <p>
    Lorem ipsum
  </p>
  <div
    class="rectangle hasBackdrop"
    role="button"
    style="left: 0px; top: 100px; width: 640px; height: 160px;"
  >
    <div
      class="backdrop"
      style="outline-width: 640px;"
    />
    <div
      class="resizeHandle"
      role="slider"
    />
  </div>
</div>
`;

exports[`The component should render with children 1`] = `
<div
  class="selection"
>
  <p>
    Lorem ipsum
  </p>
  <div
    class="rectangle hasBackdrop"
    role="button"
    style="left:0px;top:0px;width:640px;height:360px"
  >
    <div
      class="backdrop"
      style="outline-width:640px"
    />
    <div
      class="resizeHandle"
      role="slider"
    />
  </div>
</div>
`;

exports[`The component should render with minimum size notification 1`] = `
<div
  class="selection"
>
  <p>
    Lorem ipsum
  </p>
  <div
    class="rectangle hasBackdrop"
    role="button"
    style="left: 40px; top: 30px; width: 100px; height: 200px;"
  >
    <div
      class="backdrop"
      style="outline-width: 640px;"
    />
    <div
      class="resizeHandle"
      role="slider"
    />
  </div>
  <div
    class="minSizeNotification"
    style="left: 40px; top: 230px; width: 100px;"
  >
    sulu_media.min_size_notification
  </div>
</div>
`;

exports[`The component should render with value as selection 1`] = `
<div
  class="selection"
>
  <p>
    Lorem ipsum
  </p>
  <div
    class="rectangle hasBackdrop"
    role="button"
    style="left: 4px; top: 3px; width: 1px; height: 2px;"
  >
    <div
      class="backdrop"
      style="outline-width: 640px;"
    />
    <div
      class="resizeHandle"
      role="slider"
    />
  </div>
</div>
`;

exports[`The component should render without minimum size notification 1`] = `
<div
  class="selection"
>
  <p>
    Lorem ipsum
  </p>
  <div
    class="rectangle hasBackdrop"
    role="button"
    style="left: 40px; top: 30px; width: 100px; height: 200px;"
  >
    <div
      class="backdrop"
      style="outline-width: 640px;"
    />
    <div
      class="resizeHandle"
      role="slider"
    />
  </div>
</div>
`;
